--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="profil.css"/>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
      <nav>
